# AWE_Polar_Project

./: .gitignore  CHECKLIST.md  DOCUMENTATION_CLEANUP.md  GITHUB_PUSH_GUIDE.md  LICENSE  ML_model3.py  NUANIC_ANALYSIS_REPORT.md  NUANIC_EDA_QUICK_FIX.md  QUICK_PUSH.md  README.md  SETUP_SUMMARY.md  generate_sample_data.py  polar_awe9.py  pyproject.toml  requirements.txt  setup.ps1  start.ps1  test_ring.py
.github/workflows/: ci.yml  publish.yml
data/: .last_ring_addr  NUANIC_EDA_ANALYSIS.md
data/analysis_scripts/: analyze_5min_capture.py  baseline_calibration_analysis.py  extract_eda_data.py  temporal_pattern_5min.py
data/logs/ring_export/: export_log_20260227_100709.json
docs/: 00_master_docs_guide.md  README.md  REORGANIZATION.md  contributing.md  nuanic_reverse_engineering_report.md  project_organization.md
docs/nuanic/: 00_master_guide.md  01_quick_start.md  03_eda_analysis_guide.md  04_hex_decoding_guide.md  05_analysis_report.md  ACTION_PLAN.md  CLEANUP_SUMMARY.md  CLI.md  MODULE_GUIDE.md  NUANIC_QUICK_START.md  PROJECT_ORGANIZATION.md  README.md
docs/nuanic/troubleshooting/: README.md  action_plan.md
scripts/: app_streamlit.py  connect_polar.py  debug_pairing.py  discover_nuanic_services.py  discover_ring_services.py  download_datasets.py  generate_sample_data.py  monitor_dual_polar.py  monitor_polar_terminal.py  nuanic_analyzer_cli.py  nuanic_logger_cli.py  nuanic_monitor_cli.py  pair_watch.ps1  predict_realtime.py  replicate_tabnet_stress.py  ring_analyzer_cli.py  ring_logger_cli.py  ring_monitor_cli.py  scan_ble.py  train_model.py
scripts/Juho Scripts/: Juho.py
scripts/analysis/: analyze_nuanic_stream.py  investigate_dne_algorithm.py  verify_accelerometer.py
scripts/analysis/archive/: analyze_468f2717_structure.py  analyze_64byte_alternative.py  analyze_64byte_data.py  analyze_eda_format.py  analyze_exported_nuanic.py  analyze_highfreq_data.py  app_vs_raw.py  check_eda.py  compare_data.py  compare_dock_vs_finger.py  compare_three_states.py  decode_d306262b.py  detailed_comparison.py  eda_and_sensors.py  eda_comparison.py  verify_byte14_live.py  verify_formula.py  verify_new_export.py
scripts/app/: app_streamlit.py  test_app.py
scripts/ble/: analyze_nuanic_data.py  ble_ring_streamer.py  check_ring_status.py  discover_nuanic.py  log_nuanic_dual_stream.py  log_nuanic_session.py  nuanic_diagnostic.py  nuanic_highfreq_monitor.py  nuanic_monitor.py  nuanic_realtime_monitor.py  test_all_characteristics.py  test_nuanic_connection.py  test_nuanic_modules.py
scripts/ble/archive/: ble_utils.py  discover_all_chars.py  discover_chars.py  enable_streaming.py  log_nuanic_session.py  read_first.py  ring_monitor.py  scan_all_rings.py  test_eda_decode.py  test_imu_stationary.py  test_imu_stream.py  test_nuanic_modules.py  test_subscriptions.py
scripts/data/: download_datasets.py  generate_sample_data.py
scripts/infer/: predict_realtime.py
scripts/setup/: setup.ps1  start.ps1
scripts/train/: replicate_tabnet_stress.py  train_model.py
src/awe_polar/: app_streamlit.py  bleakheart.py  dashboard_utils.py  sample_data.py  train_model.py
src/awe_polar/advanced_models/: __init__.py  explainability.py  features.py  (+2 more)
src/connector/: schemas.py
src/game_bridge/: cognitive_agent.py  game_connector.py  stress_engine.py
src/polar_ble_sdk/: __init__.py  app_streamlit.py  cli.py
src/reader/: __init__.py  predictor.py  realtime.py  smoothing.py
tests/: conftest.py  test_advanced_models_scaffold.py  test_ble_ring_streamer.py  test_cognitive_agent.py  test_exporters.py  test_game_bridge_scaffold.py  test_integration.py  test_ml_model.py  test_mm_compat.py  test_nuanic_integration.py  test_polar_awe.py  test_predictor.py  test_reader_replay.py  test_ring_integration.py  test_sample_data.py  test_signal_packet.py  test_stress_engine.py
(+48 files in other folders)
