[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polar-ble-sdk"
version = "0.1.0"
authors = [
    { name = "Aleph Campos da Silveira", email = "aleph.camposdasilveira@tuni.fi" }
]
description = "An open-source Python SDK for connecting, monitoring, and capturing raw physiological and IMU data from Polar BLE devices."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
    "pandas",
    "numpy<2",
    "bleak",
    "polar-python",
    "python-dotenv",
]

[project.optional-dependencies]
ml = [
    "torch",
    "pytorch-tabnet",
    "scikit-learn",
    "joblib",
    "shap",
    "lime",
    "numba<0.60; python_version < '3.13'",
    "openpyxl",
]
dashboard = [
    "streamlit>=1.34.0; python_version >= '3.9'",
    "streamlit>=1.28.0,<1.32.0; python_version < '3.9'",
    "altair>=5",
    "plotly",
    "matplotlib",
    "seaborn",
    "openai",
]

[project.scripts]
monitor-polar = "polar_ble_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.venv313
  | __pycache__
  | data
  | datasets
  | models
)/
'''

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
exclude = [
    "scripts/replicate_tabnet_stress.py"
]
# check_untyped_defs intentionally disabled — enable after cleaning existing 25 errors.

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".venv", "reference", "data", "datasets", "models"]
